Refining the main page functionality Tying book to users on "add to library"

--- a/src/main/resources/templates/libraryView.html
+++ b/src/main/resources/templates/libraryView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -53,7 +53,7 @@
                                     <div class="media"><img class="mr-3">
                                         <div class="media-body">
                                             <h5>Media Heading</h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus nisl ac diam feugiat, non vestibulum libero posuere. Vivamus pharetra leo non nulla egestas, nec malesuada orci finibus. </p>
+                                            <p th:text="${bookid}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus nisl ac diam feugiat, non vestibulum libero posuere. Vivamus pharetra leo non nulla egestas, nec malesuada orci finibus. </p>
                                         </div>
                                     </div><span>List Group Item 1</span></li>
                             </ul>
