--- a/src/main/resources/templates/browseView.html
+++ b/src/main/resources/templates/browseView.html
@@ -28,8 +28,8 @@
         <div class="collapse navbar-collapse"
              id="navcol-1">
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link" th:href="@{/}">Browse</a></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="#">Library</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="/">Browse</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="/library">Library</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Link 3</a></li>
             </ul>
             <form class="form-inline mr-auto" target="_self">
