--- a/src/main/resources/templates/libraryView.html
+++ b/src/main/resources/templates/libraryView.html
@@ -26,9 +26,8 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">Browse</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/browseView">Browse</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/library">Library</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Link 3</a></li>
                 </ul>
                 <form class="form-inline mr-auto" target="_self">
                     <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Type to search"></div>
@@ -50,7 +49,7 @@
                         <div>
                             <ul class="list-group" th:each="book : ${bookList}">
                                 <li class="list-group-item">
-                                    <div class="media"><img class="mr-3" th:src="${book.getBookCoverLink()}" height="150px" width="125px">
+                                    <div class="media"><img class="mr-3" th:src="${book.getBookCoverLink()}" onerror="this.src='assets/img/notFound.jpg'" height="150px" width="125px">
                                         <div class="media-body">
                                             <h5 th:text="${book.getBookTitle()}">Media Heading</h5>
                                             <p th:text="${' By '+book.getBookAuthor()}"></p>
