--- a/src/main/resources/templates/browseView.html
+++ b/src/main/resources/templates/browseView.html
@@ -35,7 +35,7 @@
                 <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input
                         class="form-control search-field" type="search" id="search-field" name="search"></div>
             </form>
-            <a class="btn btn-light action-button" role="button" href="#">Action </a></div>
+            <a class="btn btn-light action-button" role="button" href="/logoutUser">Logout</a></div>
     </div>
 </nav>
 <!-- End: Navigation with Search -->
@@ -76,10 +76,10 @@
                                     <input type="submit" id="addToLibrary" value="Add" class="btn btn-primary btn-block"/>
                                 </form>
                             </div>
-                            <div class="card-text" th:text="${book.getBookId()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
+                            <!--div class="card-text" th:text="${book.getBookId()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
                                 animi molestias veritatis, pariatur dolorem error non reprehenderit vero, id. Incidunt
                                 hic laudantium soluta recusandae, voluptas libero et! Ipsa, maiores, ratione.
-                            </div>
+                            </div-->
                         </div>
                     </div>
                 </div>
