--- a/src/main/resources/templates/libraryView.html
+++ b/src/main/resources/templates/libraryView.html
@@ -31,7 +31,7 @@
                 </ul>
                 <form class="form-inline mr-auto" target="_self">
                     <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input class="form-control search-field" type="search" id="search-field" name="search" placeholder="Type to search"></div>
-                </form><a class="btn btn-light action-button" role="button" href="#">Action </a></div>
+                </form><a class="btn btn-light action-button" role="button" href="/logoutUser">Logout </a></div>
         </div>
     </nav>
     <!-- End: Navigation with Search -->
